# prime-practice-native

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  SortMapBySize.py  build.sh  build_and_copy.sh  build_and_patch_iso.sh  build_release.sh  clean.bat  compile.sh  copy.sh  copy_from_remote.sh  test_copy.sh  unused_memory.txt
.github/workflows/: docker-publish.yml  main.yml
PrimeAPI/: .gitignore  LICENSE  eppc.ld
PrimeAPI/include/: PrimeAPI.h
PrimeAPI/include/rstl/: rc_ptr.h  rstl.h  string.h  vector.h
PrimeAPI/script/: ApplyCodePatches_Template.cpp  BuildModule.py  BuildModule_old.py  DolFile.py  Mangle.py  PreplfFile.py  cppmangle.sh  createHeaderFromLst.py  demangle.py
PrimeAPI/symbols/: v1.088.lst  v1.088.s
PrimeAPI2/: 0-00.ld  PrimeAPI.cmake  PrimeToolchain.cmake  debug.ld  eppc.ld  randomprime
PrimeAPI2/python/: ApplyCodePatches_Template.cpp  DumpSymbolsFromIDB.py  convert_to_rel.py  createHeaderFromLst.py  dol.py  parse_and_generate_patch.py  patch_dol_file.py  preplf.py  symbols_to_yaml2obj_file.py  toml_to_version_header.py
PrimeAPI2/python/symbols/: prac_mod_symbols.lst  prac_mod_symbols.yaml  v1.028.lst  v1.088.lst  v1.088.lst.old
PrimeAPI2/symbols/: v1.088.lst
build_image/: Dockerfile
ext/QRCode/src/: qrcode.c
loader/: CMakeLists.txt  mapToSymbols.py
loader/stage1/: .gitignore  GALE01.map  GALE01.symbols.s  Makefile  Makefile_bak  compile.sh  stage1.c  stage1.ld
loader/stage1/src/: GALE01.symbols.s  stage1.c  stage1.ld  stage1_addresses.s
patcher/: DataReader.py  build_release.sh  main.py  opening_practice.bnr  patch.bat  patch.sh
patcher/dol_patcher/: dol.py
patcher/src/: DataReader.py  DataWriter.py  Dol.py  DolPatcher.py  GCDisc.py  NewDol.py  NewDolPatcher.py  dol.py  main.py  stream.py
patcher/symbols/: v1.088.lst
practice-mod-rust/: Cargo.toml  build.sh
practice-mod-rust/src/: hooks.rs  lib.rs  practice_mod_memory_object.rs
practice-mod-rust/src/memory/: memory_object.rs
practice-mod-rust/src/memory/mp1/: CGameGlobalObjects.rs  CGameState.rs  CSimplePool.rs
practice_mod_rust/: Cargo.toml  build.sh  cbindgen.toml
practice_mod_rust/mp_memory/: Cargo.toml
practice_mod_rust/mp_memory/src/: lib.rs  memory_object.rs
practice_mod_rust/mp_memory/src/mp1/: CGameGlobalObjects.rs  CGameState.rs  CSimplePool.rs  entities.rs  game_objects.rs  math.rs  rstl.rs
practice_mod_rust/src/: cpp_interface.rs  globals.rs  hooks.rs  lib.rs  practice_mod_memory_object.rs
practice_mod_rust/src/hooks/: mod.rs  osd.rs  pause_screen.rs
practice_mod_rust/src/hooks/pause_screen/: main_menu.rs  menu.rs  mod.rs  view.rs  warps.rs
prime-practice-patcher/: .gitignore  build_release.sh  patch.bat  patch.sh
prime-practice-patcher/src/: GCDisc.py  main.py
src/: ApplyCodePatches.cpp  CrashAssert.cpp  CrashAssert.h  ImGuiEngine.cpp  ImGuiEngine.h  ImGuiEngine.hpp  NewPauseScreen.cpp  PracticeMod.cpp  PracticeMod.hpp  TextRenderer.cpp  VGA-ROM-L4.h  VGA-ROM.l4  convfont.py  duk_config.h  duk_mem.cpp  duk_mem.h  duktape.lib.c  font_atlas.hpp  hooks.cpp  jskernel.hpp  libc.c  new.cpp  patcher_config.toml  practice_mod_rust.cpp  practice_mod_rust_input.cpp  prime-practice.cpp  prime-practice.lst  readFile.cpp  settings.cpp  version.h  vga-08.h  vga-16.h
src/UI/: BombJumping.cpp  BombJumping.hpp  DumpMemoryUI.cpp  DumpMemoryUI.hpp  EditValueMenu.cpp  EditValueMenu.h  ImHelpers.cpp  ImHelpers.hpp  InventoryMenu.cpp  InventoryMenu.hpp  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  Menus.h  MonitorWindow.cpp  MonitorWindow.hpp  PlayerMenu.cpp  PlayerMenu.h  PlayerMenu.hpp  QR.cpp  QR.hpp  RoomMenu.cpp  RoomMenu.hpp  ScanMenu.cpp  ScanMenu.hpp  SettingsMenu.cpp  SettingsMenu.hpp  UIElement.cpp  UIHeapUsageElement.cpp  UITextElement.cpp  WarpMenu.cpp  WarpMenu.h
src/include/: CMemory.h  GX.hpp  GetField.hpp  ImHelpers.hpp  MathyTypes.hpp  NewPauseScreen.hpp  PrimeAPI.h  STriggerRenderConfig.hpp  TextRenderer.hpp  VersionSelector.hpp  card.h  dvd.h  os.h  pad.h  pracc_imconfig.h  practice_mod_rust.h  readFile.hpp  rust_interface.hpp  settings.hpp  types.h  utils.hpp
src/include/Math/: CMath.hpp
src/include/UI/: UIElement.hpp  UIElementList.hpp  UIHeapUsageElement.hpp  UITextElement.hpp
src/include/prime/: CActor.hpp  CAi.hpp  CArchitectureMessage.hpp  CArchitectureQueue.hpp  CAutoMapper.hpp  CBallCamera.hpp  CCallstack.hpp  CCameraBobber.hpp  CCameraManager.hpp  CColor.hpp  CDvdFile.hpp  CEntity.hpp  CFinalInput.hpp  CFirstPersonCamera.hpp  CFontEndUI.hpp  CGameAllocator.hpp  CGameArchitectureSupport.hpp  CGameArea.hpp  CGameCamera.hpp  CGameGlobalObjects.hpp  CGameState.hpp  CGraphics.hpp  CHealthInfo.hpp  CIOWin.hpp  CIOWinManager.hpp  CInGameGuiManager.hpp  CMFGame.hpp  CMain.hpp  CMainFlow.hpp  CMapArea.hpp  CMapWorldInfo.hpp  CMath.hpp  CMemory.hpp  CMemoryCardSys.hpp  CObjectList.hpp  CPatterned.hpp  CPauseScreen.hpp  CPhysicsActor.hpp  CPhysicsState.hpp  CPlayer.hpp  (+23 more)
src/include/rstl/: auto_ptr.h  list.h  pair.h  rc_ptr.h  rstl.h  string.h  vector.h
src/include/sys/: config.h
src/libc/: libc.c  printf.c  printf.h  printf_helper.c  sscanf.c
src/system/: CrashAssert.cpp  CrashAssert.h  ImGuiEngine.cpp  ImGuiEngine.hpp  libc.c  malloc_wrappers.cpp  malloc_wrappers.h  new.cpp  sscanf.c
src/utils/: CEntity.cpp  DataBitStream.cpp  DataByteStream.hpp  Hook.cpp  Hook.hpp  HookStub.S  HookStubConstants.h  ReplaceFunction.cpp  ReplaceFunction.hpp  settings.cpp
src/world/: WorldRenderer.cpp  WorldRenderer.hpp
