[package]
name = "practice_mod_rust"
version = "0.1.0"
authors = ["Pwootage <pwootage@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mp_memory = { path = "mp_memory" }
libm = "0.2.1"
spin = "0.5.2"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}

[workspace]
members = [
  "mp_memory"
]

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
